force-app/main/default/objects/Task_Milestone__c/Task_Milestone__c.object-meta.xml
<CustomObject>
    <label>Task / Milestone</label>
    <nameField>
        <displayFormat>TM-{000000}</displayFormat>
        <label>Task / Milestone</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks and Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>