force-app/main/default/objects/Task_Milestone__c/fields/Is_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Is_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Milestone?</label>
    <type>Checkbox</type>
</CustomField>