force-app/main/default/objects/Task_Milestone__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Tasks and Milestones</relationshipLabel>
    <relationshipName>Tasks_and_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>