force-app/main/default/objects/Task_Milestone__c/fields/Task_Milestone_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Milestone_Subject__c</fullName>
    <label>Task / Milestone Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>